# lgtk

./: .gitignore  LICENSE  README.md  TODO  changelog  lgtk.cabal
lgtkdemo/7guis/: Circles.hs  Counter.hs  FlightBooker.hs  Temperature.hs  Timer.hs
lgtkdemo/Data/Equivalence/: Persistent.hs
lgtkdemo/LGtk/: ADTEditor.hs
lgtkdemo/LGtk/Demos/: IntListEditor.hs  Main.hs  Maze.hs  MazeGen.hs  TEditor.hs  Tri.hs
lgtkdemo/LGtk/Demos/Maze/: Maze.hs
lgtkdemo/LGtk/Demos/SevenGuis/: Circles.hs  Counter.hs  FlightBooker.hs  Temperature.hs  Timer.hs
main/: Main.hs
main/LGtk/: ADTEditor.hs
main/LGtk/Demos/: IntListEditor.hs  Main.hs  Maze.hs  MazeGen.hs  TEditor.hs  Tri.hs
src/: LGtk.hs
src/Control/: MLens.hs
src/Control/MLens/: ExtRef.hs  NewRef.hs  Unsafe.hs
src/Control/MLens/ExtRef/: IORef.hs  Pure.hs  Test.hs
src/Control/MLens/ExtRef/Pure/: Test.hs
src/Control/MLens/NewRef/: Unsafe.hs
src/Control/Monad/: EffRef.hs  ExtRef.hs  Register.hs  Restricted.hs
src/Control/Monad/ExtRef/: IORef.hs  Pure.hs  Test.hs
src/Control/Monad/Register/: Basic.hs
src/Data/Equivalence/: Persistent.hs  README
src/Data/LensRef/: Default.hs
src/GUI/Gtk/: Structures.hs
src/GUI/Gtk/Structures/: IO.hs
src/GUI/MLens/: Gtk.hs
src/GUI/MLens/Gtk/: ADTEditor.hs  IO.hs  Interface.hs
src/GUI/MLens/Gtk/Demos/: IntListEditor.hs  Main.hs  TEditor.hs  Tri.hs
src/LGtk/: ADTEditor.hs  Canvas.hs  Effects.hs  Key.hs  Lens.hs  Render.hs  Widgets.hs
src/LGtk/Backend/: GLFW.hs  Gtk.hs
src/LGtk/Demos/: IntListEditor.hs  Main.hs  Maze.hs  TEditor.hs  Tri.hs
src/LGtk/Demos/Maze/: Maze.hs  README  Types.hs
