name:               lgtk
version:            0.4
category:           GUI
synopsis:           lens-based API for Gtk
description:
    The main interface module of LGtk is "GUI.MLens.Gtk".
    .
    See also <http://people.inf.elte.hu/divip/LGtk/index.html>
stability:          experimental
license:            BSD3
license-file:       LICENSE
author:             Péter Diviánszky
homepage:           http://people.inf.elte.hu/divip/LGtk/index.html
bug-reports:        http://hub.darcs.net/divip/lgtk/issues
maintainer:         divipp@gmail.com
cabal-version:      >= 1.8
build-type:         Simple

source-repository head
  type:             darcs
  location:         http://hub.darcs.net/divip/lgtk


library

  hs-source-dirs:
                    src
  build-depends:
                    base < 5
                  , containers
                  , directory

                  , data-lens
                  , mtl
                  , control-monad-free

                  , gtk
  exposed-modules:
                    Control.MLens
                    Control.MLens.Unsafe
                    Control.MLens.ExtRef.Test

                    GUI.MLens.Gtk
                    GUI.MLens.Gtk.ADTEditor

                    GUI.MLens.Gtk.Demos.Main
                    GUI.MLens.Gtk.Demos.Tri
                    GUI.MLens.Gtk.Demos.IntListEditor
                    GUI.MLens.Gtk.Demos.TEditor
  other-modules:
                    Control.Monad.Restricted
                    Control.Monad.Register

                    Data.MLens.Ref

                    Control.MLens.NewRef
                    Control.MLens.ExtRef
                    Control.MLens.ExtRef.Pure

                    GUI.MLens.Gtk.IO
                    GUI.MLens.Gtk.Interface
  ghc-options: 
                    -threaded
                    -Wall 
                    -fno-warn-incomplete-patterns 
                    -fno-warn-name-shadowing 
                    -fno-warn-missing-signatures 
                    -fno-warn-orphans
                    -fno-warn-type-defaults

executable lgtkdemo

  build-depends:
                    base < 5
                  , lgtk
  main-is:
                    Main.hs
  hs-source-dirs:
                    main
  ghc-options: 
                    -threaded
                    -Wall 
                    -fno-warn-incomplete-patterns 
                    -fno-warn-name-shadowing 
                    -fno-warn-missing-signatures 
                    -fno-warn-orphans
                    -fno-warn-type-defaults

