name:               lgtk
version:            0.8
category:           GUI
synopsis:           lens-based API for Gtk
description:
    The main interface module of LGtk is "LGtk".
stability:          experimental
license:            BSD3
license-file:       LICENSE
author:             Péter Diviánszky
homepage:           http://www.haskell.org/haskellwiki/LGtk
bug-reports:        https://github.com/divipp/lgtk/issues
maintainer:         divipp@gmail.com
cabal-version:      >= 1.8
build-type:         Simple

source-repository head
  type:             git
  location:         https://github.com/divipp/lgtk.git

Flag Gtk
  Description:      Build the Gtk backend
  Default:          False

Flag Pure
  Description:      Use the pure but slow implementation of lens-references
  Default:          False


library

  hs-source-dirs:
                    src
  build-depends:
                    base < 5

                  , groups == 0.4.*
                  , semigroups == 0.13.*
                  , transformers == 0.3.*
                  , mtl == 2.1.*
                  , monad-control == 0.3.*
                  , operational == 0.2.*
                  , lens == 4.1.*

                  , vector == 0.10.*
                  , containers == 0.5.*
                  , directory == 1.2.*
                  , filepath == 1.3.*
                  , system-filepath == 0.4.*
                  , fsnotify == 0.0.*

                  , colour == 2.3.*
                  , JuicyPixels == 3.1.*
                  , diagrams-lib == 1.1.*
                  , diagrams-cairo == 1.1.*
--                  , SVGFonts == 1.4.*
                  , OpenGLRaw == 1.4.*
                  , GLFW-b == 1.4.*
--                  , threepenny-gui == 0.4.1.*

  exposed-modules:
                    -- lens-references
                    Data.LensRef
                    Data.LensRef.Pure
                    Data.LensRef.Fast
                    Data.LensRef.Test

                    -- lgtk
                    LGtk.Effects
                    LGtk.Widgets
                    LGtk.Render
                    LGtk

                    -- lgtk-glfw
                    LGtk.Backend.GLFW

                    -- lgtk-demos
                    LGtk.ADTEditor
                    LGtk.Demos.Main
                    LGtk.Demos.Tri
                    LGtk.Demos.IntListEditor
                    LGtk.Demos.TEditor

  if flag(Gtk)
    build-depends:
                    gtk == 0.12.*
    exposed-modules:
                    LGtk.Backend.Gtk
    cpp-options:
                    -D__GTK__

  if flag(Pure)
    cpp-options:
                    -D__PURE__

  ghc-options: 
                    -threaded
                    -Wall 
                    -fno-warn-incomplete-patterns 
                    -fno-warn-name-shadowing 
                    -fno-warn-missing-signatures 
                    -fno-warn-orphans
                    -fno-warn-type-defaults


executable lgtkdemo
  build-depends:
                    base < 5
                  , lgtk
  main-is:
                    Main.hs
  hs-source-dirs:
                    main
  ghc-options:
                    -threaded

