name:               lgtk
version:            0.9
category:           GUI
synopsis:           Lens GUI Toolkit
description:
    LGtk is a GUI Toolkit.
    .
    Main goals of LGtk:
    .
    -Provide a Haskell EDSL for declarative description of interactive graphical applications
    .
    -Provide an API for custom widget design
    .
    -Provide a playground for high-level declarative features like
    derived state-save and undo-redo operations and
    type-driven GUI generation
    .
    For more information visit the following links:
    .
    -<http://www.haskell.org/haskellwiki/LGtk haskell.org wiki page>
    .
    -<http://lgtk.wordpress.com/ Wordpress blog>
    .
    -<https://github.com/divipp/lgtk GitHub repository>
    .
    -<http://hackage.haskell.org/package/lgtk Haddock documentation (this page)>
stability:          experimental
license:            BSD3
license-file:       LICENSE
author:             Péter Diviánszky
homepage:           http://www.haskell.org/haskellwiki/LGtk
bug-reports:        https://github.com/divipp/lgtk/issues
maintainer:         divipp@gmail.com
cabal-version:      >= 1.8
build-type:         Simple
extra-source-files: changelog

source-repository head
  type:             git
  location:         https://github.com/divipp/lgtk.git

Flag Rasterific
  Description:      Use Rasterific instead of Cairo
  Default:          False

Flag Gtk
  Description:      Build the Gtk backend (conflicts with Rasterific)
  Default:          False


library

  hs-source-dirs:
                    src
  build-depends:
                    base < 5

                  , groups < 0.5
                  , semigroups < 0.16
                  , transformers >= 0.3 && < 0.5
                  , mtl < 2.3
                  , monad-control < 0.4
                  , operational < 0.3
                  , lens < 4.4

                  , vector < 0.11
                  , containers < 0.6
--                  , directory < 1.3
--                  , filepath < 1.4
--                  , system-filepath < 0.5
--                  , fsnotify < 0.2
                  , time < 1.5

                  , colour < 2.4
                  , diagrams-lib == 1.2.*
--                  , SVGFonts == 1.4.*
                  , OpenGLRaw < 1.6
                  , GLFW-b < 1.5
--                  , threepenny-gui == 0.4.1.*

                  , lensref == 0.3.*

  exposed-modules:
                    LGtk
  other-modules:
                    LGtk.Effects
                    LGtk.Key
                    LGtk.Widgets
                    LGtk.Render

                    -- lgtk-glfw
                    LGtk.Backend.GLFW

  ghc-options:
                    -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults

  if flag(Gtk)
    build-depends:
                    gtk == 0.12.*
    other-modules:
                    LGtk.Backend.Gtk
    cpp-options:
                    -D__GTK__

  if flag(Rasterific)
    build-depends:
                    diagrams-rasterific == 0.1.*
                  , JuicyPixels == 3.1.*
    cpp-options:
                    -D__RASTERIFIC__

  if !flag(Rasterific)
    build-depends:
                    diagrams-cairo == 1.2.*
                  , cairo < 0.13


executable lgtkdemo
  build-depends:
                    base < 5

                  , mtl < 2.3
                  , lens < 4.4

                  , containers < 0.6
                  , vector < 0.11
                  , array < 0.6
                  , random < 1.1
                  , random-shuffle < 0.1
                  , time < 1.5
                  , safe

                  , diagrams-lib == 1.2.*

                  , lgtk
  main-is:
                    Main.hs
  other-modules:
                    Data.Equivalence.Persistent

                    LGtk.ADTEditor
                    LGtk.Demos.Main
                    LGtk.Demos.Tri
                    LGtk.Demos.IntListEditor
                    LGtk.Demos.TEditor
                    LGtk.Demos.Maze.Types
                    LGtk.Demos.Maze.Maze
                    LGtk.Demos.MazeGen
                    LGtk.Demos.Maze
                    LGtk.Demos.SevenGuis.Counter
                    LGtk.Demos.SevenGuis.Temperature
                    LGtk.Demos.SevenGuis.FlightBooker
                    LGtk.Demos.SevenGuis.Timer
                    LGtk.Demos.SevenGuis.Circles

  hs-source-dirs:
                    lgtkdemo
  ghc-options:
                    -threaded
                    -Wall
                    -fwarn-incomplete-record-updates
                    -fno-warn-name-shadowing
                    -fno-warn-missing-signatures
                    -fno-warn-type-defaults
